Fixes too long items in general igopnet menu

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ Template: twentyeleven
 @import url("../twentyeleven/style.css");
 
 #access a {
-padding: 0px 13px;
+padding: 0px 9px;
 }
 
 #access div {
